[package]
name = "hyst-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bitmask = "0.5.0"
bytemuck = { version = "1.23.1", features = ["bytemuck_derive", "derive"] }
glyphon = "0.9.0"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
slotmap = "1.0.7"
taffy = "0.8.3"
wgpu = "25.0.2"
winit = "0.30.11"
